[metadata]
name = fusion-toolbox
author = Audrey Saltzman
author_email = audreysa@mit.edu
description = Amalgamated tools for modeling magnetic confinement fusion physics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/j-fletcher/fusion-toolbox
license = MIT
license_file = LICENSE
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/j-fletcher/fusion-toolbox
    Tracker = https://github.com/j-fletcher/fusion-toolbox/issues
    
[options]
packages = find:
python_requires= >=3.9
install_requires=
    numpy >= 1.0.0
    matplotlib >= 3.0.0

[options.extras_require]
tests = 
    pytest-cov >= 4.0.0
    pytest >= 7.0.0
    pylint >= 2.0.0
